# salesforce-py

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  pyproject.toml  ty.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: health-check.yml
docs/superpowers/plans/: 2026-05-05-industries-manufacturing.md
docs/superpowers/specs/: 2026-05-05-industries-manufacturing-design.md
src/salesforce_py/: __init__.py  _auth.py  _defaults.py  _retry.py  exceptions.py
src/salesforce_py/bulk/: README.md  __init__.py  _duckdb.py  _limits.py  _session.py  _soql.py  base.py  client.py
src/salesforce_py/bulk/operations/: __init__.py  ingest.py  query.py
src/salesforce_py/connect/: README.md  __init__.py  _session.py  base.py  client.py
src/salesforce_py/connect/operations/: __init__.py  action_links.py  activity_reminders.py  agentforce_data_libraries.py  announcements.py  bot_version_activation.py  chatter.py  clean.py  cms.py  cms_content_search.py  comments.py  commerce_addresses.py  commerce_cart.py  commerce_checkout.py  commerce_context.py  commerce_einstein_webstore.py  commerce_my_profile.py  commerce_order_summaries.py  commerce_pricing.py  commerce_products.py  commerce_taxes.py  commerce_wishlists.py  communities.py  content_hub.py  conversation_application.py  conversations.py  core.py  custom_domain.py  data_integration.py  duplicate.py  einstein_recommendations.py  email_merge_fields.py  feeds.py  files.py  flow_approval.py  groups.py  knowledge.py  managed_topics.py  microsites.py  motifs.py  (+24 more)
src/salesforce_py/data360/: README.md  __init__.py  _session.py  base.py  client.py
src/salesforce_py/data360/operations/: __init__.py  activation_targets.py  activations.py  calculated_insights.py  connections.py  connectors.py  data_action_targets.py  data_actions.py  data_clean_room.py  data_graphs.py  data_kits.py  data_lake_objects.py  data_model_objects.py  data_spaces.py  data_streams.py  data_transforms.py  document_ai.py  identity_resolutions.py  insights.py  machine_learning.py  metadata.py  private_network_routes.py  profile.py  query.py  search_index.py  segments.py  universal_id_lookup.py
src/salesforce_py/industries/: __init__.py
src/salesforce_py/industries/manufacturing/: README.md  __init__.py  (+5 more)
src/salesforce_py/models/: README.md  __init__.py  _session.py  base.py  client.py  supported_models.py  token.py
src/salesforce_py/rest/: README.md  __init__.py  _session.py  base.py  client.py
src/salesforce_py/sf/: __init__.py  _runner.py  base.py  deploy.py  org.py  setup.py  task.py
src/salesforce_py/utils/: __init__.py  salesforce_id.py
tests/: conftest.py  test_retry.py  test_utils.py
tests/bulk/: conftest.py  test_bulk_client.py  test_duckdb.py  test_ingest.py  test_limits.py  test_query.py  test_soql.py
tests/bulk/live/: test_bulk_live.py
tests/connect/: test_connect.py
tests/connect/live/: test_connect_live.py
tests/data360/: test_data360.py
tests/fixtures/: sample_output.json
tests/industries/manufacturing/: _helpers.py  test_namespace_wiring.py  test_property_list.py  test_sales_agreements.py  test_sample_management.py  test_transformations.py  test_warranty.py
tests/models/: test_models.py
tests/models/live/: test_models_live.py
tests/rest/: conftest.py  test_composite.py  test_factory.py  test_operations.py  test_query.py  test_rest_client.py  test_sobjects.py
tests/rest/live/: test_rest_live.py
tests/sf/: test_live_org.py  test_org.py  test_runner.py
(+52 files in other folders)
