[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-py"
dynamic = ["version"]
description = "Python wrapper for Salesforce CLIs and APIs"
readme = "README.md"
license = { file = "LICENSE" }
license-expression = "Apache-2.0"
authors = [{ name = "Stewart Anderson", email = "stewart.anderson@live.co.uk" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
rest = ["httpx>=0.27", "pydantic>=2.7"]
bulk = ["httpx>=0.27", "pydantic>=2.7", "aiofiles>=23.0"]
code-analyzer = ["ruamel.yaml>=0.18"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.4", "ty>=0.0.1"]
all = ["httpx>=0.27", "pydantic>=2.7", "aiofiles>=23.0", "ruamel.yaml>=0.18"]

[tool.hatch.version]
path = "src/salesforce_py/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/salesforce_py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
