[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-py"
dynamic = ["version"]
description = "Python wrapper for Salesforce CLIs and APIs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stewart Anderson", email = "stewart.anderson@live.co.uk" }]
requires-python = ">=3.12"
dependencies = ["tenacity>=9.0"]

[project.urls]
Homepage = "https://github.com/geekstewie/salesforce-py"
Repository = "https://github.com/geekstewie/salesforce-py"
Issues = "https://github.com/geekstewie/salesforce-py/issues"

[project.optional-dependencies]
rest = ["httpx[http2]>=0.27", "pydantic>=2.7"]
bulk = ["httpx[http2]>=0.27", "pydantic>=2.7", "aiofiles>=23.0"]
connect = ["httpx[http2]>=0.27"]
data360 = ["httpx[http2]>=0.27"]
models = ["httpx[http2]>=0.27"]
code-analyzer = ["ruamel.yaml>=0.18"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "ty>=0.0.1",
    "bandit>=1.7",
    "httpx[http2]>=0.27",
]
all = ["httpx[http2]>=0.27", "pydantic>=2.7", "aiofiles>=23.0", "ruamel.yaml>=0.18"]

[tool.hatch.publish.index]
repo = "main"

[tool.hatch.version]
path = "src/salesforce_py/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/salesforce_py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/sf/test_live_org.py"
markers = [
    "integration: live Salesforce org tests — run manually with: uv run pytest tests/sf/test_live_org.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E722",  # bare-except: Allow bare except in certain cases
    "E402",  # module-import-not-at-top-of-file: Allow imports after code in some files
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = [
    "B101",  # assert_used: pytest tests use assert; runtime asserts are intentional
    "B110",  # try_except_pass: acceptable pattern in this codebase
    "B404",  # blacklist subprocess: required for the sf CLI wrapper
    "B602",  # subprocess_popen_with_shell_equals_true: controlled internal commands only
    "B607",  # start_process_with_partial_path: sf/node/brew/npm resolved via PATH by design
    "B608",  # hardcoded_sql_expressions: all instances are Salesforce SOQL (read-only), not database SQL
]
